# testshed

./: .gitignore  .pre-commit-config.yaml  .pytest.ini  .ruff.toml  README.md  pyproject.toml
.github/workflows/: publish.yaml  tag.yaml  test.yaml
src/: bootstrap.py  plugin.py
src/_internal/: state.py
src/docker/: __init__.py  cleanup.py  container.py  container.pyi  container_config.py  decorators.py  factory.py  file.py  probe.py  readiness.py
src/fixtures/: __init__.py  playwright.py
src/kloudkit/testshed/_internal/: state.py
src/kloudkit/testshed/core/: __init__.py  bootstrap.py  state.py  (+1 more)
src/playwright/: factory.py
src/plugin/: __init__.py  addoptions.py  configure.py  presenter.py
src/utils/regex/: version.py
tests/: conftest.py
tests/integration/: conftest.py  test_container.py  test_container_fs.py  test_container_process.py  test_container_shell.py  test_docker_container.py  test_docker_sidecar.py  test_shed_attach.py  test_shed_decorators.py  test_shell_execute.py
tests/stubs/: .hidden  sample.txt
tests/unit/: test_error_handler.py  test_options.py  test_package_exports.py  test_plugin_configure.py
tests/unit/_internal/: test_state.py
tests/unit/core/: test_state.py  test_wrapper.py
tests/unit/docker/: test_container.py  test_container_config.py  test_exports.py
tests/unit/fixtures/: test_generic.py  test_shed.py  test_shed_attach.py  test_shed_deferred.py
tests/unit/plugin/: test_addoptions.py  test_markers.py  test_presenter.py  test_session.py  test_validation.py
tests/unit/utils/: test_http.py  test_network.py
(+33 files in other folders)
